@@ -10,6 +10,10 @@ What's New in Stackless 3.X.X?
 
 *Release date: 20XX-XX-XX*
 
+- https://bitbucket.org/stackless-dev/stackless/issues/91
+  Stackless now resets the recursion depth, if you re-bind
+  a tasklet to another callable.
+
 - https://bitbucket.org/stackless-dev/stackless/issues/90
   Stackless now raises a RuntimeError, if you try to unbind (tlet.bind(None))
   a main-tasklet.
